--- a/templates/transmission.j2
+++ b/templates/transmission.j2
@@ -61,7 +61,7 @@
     "rpc-whitelist-enabled": false, 
     "scrape-paused-torrents-enabled": true, 
     "script-torrent-done-enabled": true, 
-    "script-torrent-done-filename": "/home/root/posttorrent.sh", 
+    "script-torrent-done-filename": "/root/posttorrent.sh", 
     "seed-queue-enabled": false, 
     "seed-queue-size": 10, 
     "speed-limit-down": 100, 
