--- a/templates/samba.j2
+++ b/templates/samba.j2
@@ -47,14 +47,14 @@
 # The specific set of interfaces / networks to bind to
 # This can be either the interface name or an IP address/netmask;
 # interface names are normally preferred
-;   interfaces = 127.0.0.0/8 eth0
+interfaces = {{ internal_interface }}
 
 # Only bind to the named interfaces and/or networks; you must use the
 # 'interfaces' option above to use this.
 # It is recommended that you enable this feature if your Samba machine is
 # not protected by a firewall or is a firewall itself.  However, this
 # option cannot handle dynamic or non-broadcast interfaces correctly.
-;   bind interfaces only = yes
+bind interfaces only = yes
 
 
 
@@ -234,23 +234,23 @@
 ;   create mask = 0600
 ;   directory mask = 0700
 
-[printers]
-   comment = All Printers
-   browseable = no
-   path = /var/spool/samba
-   printable = yes
-   guest ok = no
-   read only = yes
-   create mask = 0700
+;[printers]
+;   comment = All Printers
+;   browseable = no
+;   path = /var/spool/samba
+;   printable = yes
+;   guest ok = no
+;   read only = yes
+;   create mask = 0700
 
 # Windows clients look for this share name as a source of downloadable
 # printer drivers
-[print$]
-   comment = Printer Drivers
-   path = /var/lib/samba/printers
-   browseable = yes
-   read only = yes
-   guest ok = no
+;[print$]
+;   comment = Printer Drivers
+;   path = /var/lib/samba/printers
+;   browseable = yes
+;   read only = yes
+;   guest ok = no
 # Uncomment to allow remote administration of Windows print drivers.
 # You may need to replace 'lpadmin' with the name of the group your
 # admin users are members of.
@@ -258,3 +258,22 @@
 # to the drivers directory for these users to have write rights in it
 ;   write list = root, @lpadmin
 
+# Hdd1 share
+[hdd1]
+	comment = hdd1
+	path = /mnt/hdd1
+	browseable = yes
+	read only = no
+	guest ok = yes
+	create mask = 0644
+	directory mask = 2777
+
+# Hdd2 share
+[hdd2]
+	comment = hdd2
+	path = /mnt/hdd2
+	browseable = yes
+	read only = no
+	guest ok = yes
+	create mask = 0644
+	directory mask = 2777
