watchlist in config

--- a/templates/flexget.config.j2
+++ b/templates/flexget.config.j2
@@ -13,40 +13,9 @@ templates:
           set:
             path: /mnt/hdd1/soap/{{ '{{' }}series_name{{ '}}' }}/Season {{ '{{' }}series_season{{ '}}' }}
       favgroup:
-        - Arrow
-        - Almost Human
-        - Black Sails
-        - Blindspot
-        - Cosmos A Space Time Odyssey
-        - Game of Thrones
-        - Grandfathered
-        - Homeland
-        - Family Guy
-        - Fargo
-        - Fear the Walking Dead
-        - Elementary
-        - Lilyhammer
-        - Limitless
-        - Lookinglass
-        - Lucifer
-        - Mr Robot
-        - Minority Report
-        - Misfits
-        - Person of Interest
-        - Rick and Morty
-        - Rosewood
-        - Sherlock
-        - South Park
-        - The Big Bang Theory
-        - The Grinder
-        - The Following
-        - The Simpsons
-        - The Muppets
-        - The Walking Dead
-        - True Detective
-        - Vikings
-        - Under the Dome
-        - Z Nation
+      {% for item in series %}
+        - {{ item }}
+      {% endfor %}
 tasks:
   revolutiontt task:
     template:
